apps/skiut/skiut-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiut-backend
  namespace: skiut
spec:
  replicas: 3
  selector:
    matchLabels:
      app: skiut-backend
  template:
    metadata:
      labels:
        app: skiut-backend
    spec:
      containers:
      - name: skiut-backend
        image: ghcr.io/ski-utc/server-skiut-2026:10115f38b49c0d49a98d916ba3f054091f472882
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
        volumeMounts:
        - name: laravel-storage
          mountPath: /var/www/html/storage
      volumes:
      - name: laravel-storage
        persistentVolumeClaim:
          claimName: skiut-backend-storage
