apps/skiut/skiut-database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skiut-database
  namespace: skiut
spec:
  serviceName: skiut-database
  replicas: 1
  selector:
    matchLabels:
      app: skiut-database
  template:
    metadata:
      labels:
        app: skiut-database
    spec:
      containers:
        - name: skiut-database
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-init-scripts
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: skiut-database-init
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.lifecycle
                    operator: In
                    values:
                      - stable
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ""
        resources:
          requests:
            storage: 10Gi
        selector:
          matchLabels:
            app: skiut
