apps/skiut/skiut-pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skiut-pma
  namespace: skiut
spec:
  selector:
    app: skiut-pma
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
